fixed pdf page overflow

--- a/src/Pdf.css
+++ b/src/Pdf.css
@@ -24,6 +24,7 @@
     max-width: calc(100% - 2em);
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
     margin: 1em;
+    overflow: hidden;
 }
 
 .embed-container .react-pdf__Page canvas {
